 + New call: SendGameResultOff() -- Disable the game automatically setting a game result in the stats screen
 + New call: SendRankingStatsOff() -- Disable the game automatically filling the team rankings in the stats screen
 + New call: SendAchievementsStatsOff() -- Disable the game automatically populating the bullet point list in the “Details” section on the stats screen
 + New call: EndTurn([noTaunts]) -- Ends the current turn
 + New hook: onVisualGearAdd(vgUid) -- called when a visual gear is added
 + New hook: onVisualGearDelete(vgUid) -- called when a visual gear is deleted
 + New hook: onUsedAmmo(ammoType) -- called when ammo has been finished using (e.g. after both shotgun shots)
 + New variable: AirMinesNum -- Number of air mines being placed on a medium-sized map
 + New variable: WorldEdge -- World edge type (weNone, weWrap, weBounce, weSea)
 + New variable: AmmoTypeMax -- Maximum ammo type ID (useful to iterate through all ammo types, starting by 0)
 + Locale library: loc_noop -- Mark string for translation but don't translate it
 + Animate library: AnimInit([startAnimating]) -- New parameter startAnimating: if true, will start game in cinematic mode with most controls disabled. Must play an animation after that
 * Fixed call: HideHog(gear) -- Fix crash when gear is invalid. Returns true on success or false otherwise
 * Fixed call: SwitchHog(gear) -- Fix new hog being unable to open ammo menu
 * Removed call: SetAmmoStore -- Old undocumented function of questional use, has never been used

0.9.21 -> 0.9.22
 + New Weapon / Map object: AirMine (floating mine that will follow nearby hedgehogs)
 + Extensive changes to TechRacer: Variable terrain types, enhanced parameters, hwmap interpreter, fuel limiter, etc. 
 + HedgeEditor - create missions/etc. in-game! see http://hedgewars.org/HedgeEditor
 + Map previews can now take script parameters into account and preview waypoints in TechRacer
 + Added a couple new flags